{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 25,
  "lineage": "0597ff5a-7f2f-8306-48dd-de725b400ee3",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad21ae1d0696ad58",
            "arn": "arn:aws:ec2:ap-south-1:471112540777:instance/i-0f9aeb889632a0933",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9aeb889632a0933",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076839be675c26f13",
            "private_dns": "ip-10-0-0-249.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.249",
            "public_ip": "13.201.127.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e4acc314b17eb88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd072e0c9575e5bf",
            "tags": {
              "Name": "web-instance"
            },
            "tags_all": {
              "Name": "web-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0830dfe53a3aff228"
            ]
          },
          "dependencies": [
            "module.aws.aws_key_pair.deployer",
            "module.aws.aws_security_group.web_sg",
            "module.aws.aws_subnet.main",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112540777:internet-gateway/igw-0d745e5b1cbfc92f3",
            "id": "igw-0d745e5b1cbfc92f3",
            "owner_id": "471112540777",
            "vpc_id": "vpc-02cef5ca52ca5742c"
          },
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112540777:loadbalancer/app/tf-lb/5c63006c1061629d",
            "arn_suffix": "app/tf-lb/5c63006c1061629d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-1423592479.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112540777:loadbalancer/app/tf-lb/5c63006c1061629d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0830dfe53a3aff228"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054786ac93ebbc64c"
              },
              {
                "subnet_id": "subnet-0dd072e0c9575e5bf"
              }
            ],
            "subnets": [
              "subnet-054786ac93ebbc64c",
              "subnet-0dd072e0c9575e5bf"
            ],
            "vpc_id": "vpc-02cef5ca52ca5742c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.aws.aws_security_group.web_sg",
            "module.aws.aws_subnet.main",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d745e5b1cbfc92f3",
            "id": "r-rtb-06861465ebf34635c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06861465ebf34635c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_internet_gateway.igw",
            "module.aws.aws_route_table.main",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112540777:route-table/rtb-06861465ebf34635c",
            "id": "rtb-06861465ebf34635c",
            "owner_id": "471112540777",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02cef5ca52ca5742c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027c8a34ee440e2d3",
            "route_table_id": "rtb-06861465ebf34635c",
            "subnet_id": "subnet-0dd072e0c9575e5bf"
          },
          "dependencies": [
            "module.aws.aws_route_table.main",
            "module.aws.aws_subnet.main",
            "module.aws.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b688a7407f3eb1b6",
            "route_table_id": "rtb-06861465ebf34635c",
            "subnet_id": "subnet-054786ac93ebbc64c"
          },
          "dependencies": [
            "module.aws.aws_route_table.main",
            "module.aws.aws_subnet.main",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112540777:security-group/sg-0830dfe53a3aff228",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0830dfe53a3aff228",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "471112540777",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02cef5ca52ca5742c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112540777:subnet/subnet-0dd072e0c9575e5bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd072e0c9575e5bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112540777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02cef5ca52ca5742c"
          },
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112540777:subnet/subnet-054786ac93ebbc64c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054786ac93ebbc64c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112540777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02cef5ca52ca5742c"
          },
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112540777:vpc/vpc-02cef5ca52ca5742c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02da7b576b9b5be18",
            "default_route_table_id": "rtb-0a9667c5ca2d1188b",
            "default_security_group_id": "sg-0f7b9226d0bd7078b",
            "dhcp_options_id": "dopt-0abe76cb91c1aba47",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cef5ca52ca5742c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9667c5ca2d1188b",
            "owner_id": "471112540777"
          }
        }
      ]
    }
  ]
}